--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "next": "14.2.11",
+    "next": "^15.0.1",
     "rc-swipeout": "^2.0.11",
     "react": "^18",
     "react-dom": "^18"
